changes to YAP ireland page and fixed blog on mobiles

--- a/themes/airspace-hugo/static/css/style.css
+++ b/themes/airspace-hugo/static/css/style.css
@@ -98,3 +98,9 @@
   margin-right: auto;
   width: 50%;
 }
+
+.icons {
+  font-size: 4em;
+  margin-top: .4em;
+  text-align: center;
+}
